--- a/codebulid.yml
+++ b/codebulid.yml
@@ -5,26 +5,27 @@ phases:
       - echo Logging in to Amazon ECR....
       - aws --version
       #- $(aws ecr get-login --region ap-south-1 --no-include-email)
-      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 744709874293.dkr.ecr.ap-south-1.amazonaws.com
-      - # ECR repository configuration
-      - REPOSITORY_URI=744709874293.dkr.ecr.ap-south-1.amazonaws.com/codebulid/ecs
+      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin YOUR_AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com
+      - # Replace with this to your repository URI
+      - REPOSITORY_URI=YOUR_AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/spring-demo-ecr
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
   build:
     commands:
       - echo Build started on `date`
+      - echo building the Jar file
+      - mvn clean install
       - echo Building the Docker image...
-      - docker build -t codebulid/ecs .
-      - docker tag codebulid/ecs $REPOSITORY_URI:latest
-      - docker tag codebulid/ecs $REPOSITORY_URI:$IMAGE_TAG
+      - docker build -t $REPOSITORY_URI:latest .
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
       - echo Build completed on `date`
-      - echo pushing to ECR repository...
+      - echo pushing to repo
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
       # Give your container name
-      - DOCKER_CONTAINER_NAME=codebulid-ecs-container
+      - DOCKER_CONTAINER_NAME=spring-demo-ecr
       - printf '[{"name":"%s","imageUri":"%s"}]' $DOCKER_CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
       - echo $DOCKER_CONTAINER_NAME
       - echo printing imagedefinitions.json
@@ -32,3 +33,4 @@ phases:
 artifacts:
   files:
     - imagedefinitions.json
+    - target/springboot-aws-deploy.jar
